--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿altair==5.5.0
+altair==5.5.0
 anyio==4.9.0
 asttokens==3.0.0
 attrs==25.1.0
@@ -131,4 +131,3 @@ watchdog==6.0.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
 zope.interface==7.2
-
